--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "express": "^4.18.2",
     "he": "^1.2.0",
     "jsembedtemplateengine": "^1.0.0",
+    "knex": "^2.5.1",
+    "objection": "^3.1.1",
     "socket.io": "^4.5.4",
+    "sqlite3": "^5.1.6",
     "xterm": "^5.1.0"
   }
 }
